report writting after problem with int var

--- a/doc/Thesis.tex
+++ b/doc/Thesis.tex
@@ -70,7 +70,7 @@
 \section{Structuring Local Search Model}
 \input{strucLS}
   \subsection{Simplification and Dependency Digraph}
-    \input{ddg} \label{sec_ddg}
+%    \input{ddg} \label{sec_ddg}
   \subsection{Propagation Queue}  
     \input{propaqueue}\label{sec_propaqueue}
     
@@ -82,6 +82,8 @@
 \section{Metaheuristics}
 \section{Tests}
 \section{Results}
+\section{Future Work}
+  \input{future}
 \section{Conclusion}
 
 \bibliographystyle{plain}
