--- a/doc/main.bib
+++ b/doc/main.bib
@@ -4,4 +4,13 @@
  year = {2005},
  isbn = {0262220776},
  publisher = {The MIT Press},
+}
+
+@book{cormen,
+ author = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald L. and Stein, Clifford},
+ title = {Introduction to Algorithms, Third Edition},
+ year = {2009},
+ isbn = {0262033844, 9780262033848},
+ edition = {3rd},
+ publisher = {The MIT Press},
 } 
