--- a/doc/future.tex
+++ b/doc/future.tex
@@ -6,3 +6,4 @@ to remove such that the graph is DAG. \\
 \boste{Propagation queue :} Finding a datastructure better suited for propagation queues than red-black trees (C++ 
 set). \\ 
 \boste{Mixed neighborhood :} Find a way to treat both integer and binary variables in local search. \\
+\boste{Make ``true'' DFS when creating propagation queues, no revisit of vertices} \\
