--- a/doc/style.tex
+++ b/doc/style.tex
@@ -15,9 +15,10 @@
 \newcommand{\true}{\textbf{true }}
 \newcommand{\false}{\textbf{false }}
 \newcommand{\Tau}{\mathcal{T}}
-\newcommand{\algdata}{\SetKwData{Var}{Variable}\SetKwData{Con}{Constraint}\SetKwInOut{Input}{
+\newcommand{\algdata}{\SetKwData{Var}{Variable}\SetKwData{Con}{Constraint}\SetKwData{funccon}{Functional constraint}
+\SetKwInOut{Input}{
 input}\SetKwInOut{Output}{ output}\SetKwData{int}{int}\DontPrintSemicolon\SetKwData{Bool}{bool}\SetKwFunction{Sum}{Sum}
-\SetKwFunction{bre}{break}\SetKwFunction{Max}{Max}}
+\SetKwFunction{bre}{break}\SetKwFunction{Max}{Max}\SetKwFunction{continue}{continue}}
 
 %\renewcommand{\thealgorithm}{} % Removes numbering on algorithms
 % Useful commands: 
