--- a/doc/bpip.tex
+++ b/doc/bpip.tex
@@ -19,6 +19,5 @@ developed for solving them. The techniques can be i.e. branch and bound, cutting
 $\mathbf{x} \in \mathbb{R}^n$, on the variables creating a linear programming problem \cite[p. 30]{ilpbog}. The linear 
 programming problem is easier to solver than the integer programming problem and can be used to find bounds on the 
 integer programming problem. The linear formulation can be transformed to \emph{standard form}, all constraints are 
-equality constraints, by introducing auxiliary variables and then solved using the simplex method. \boste{Jeg ved ikke 
-om jeg skal uddybe det mere i.e Dual problem, når jeg kun beskæftiger mig med BP/IP} \\ 
+equality constraints, by introducing auxiliary variables and then solved using the simplex method. \\ 
 There exist several solver for (integer) linear programming problems such as Cplex, Gurobi, GLPK and Scip. 
