--- a/doc/discOpt.tex
+++ b/doc/discOpt.tex
@@ -1,5 +1,5 @@
 A \emph{Constraint Satisfaction Problem} (CSP) is defined as a triple $\mathbb{P} = \langle X,D,C \rangle$. A 
-\emph{candidate solution} to a CSP $\mathbb{P}$ is a vector of n elements 
+\emph{candidate solution} to a CSP $\mathbb{P}$ is a vector of $n$ elements \\
 %$\tau = (\tau_1,\tau_2,\dots,\tau_n) $ where $\tau_i \in D_i$. 
 $\tau = (V(x_1), V(x_2), \dots , V(x_n))$ from the set of all candidate solutions $S$ called the \emph{search space}.  
 % D_1 \times D_2 \times %\dots , D_n) $ where $\tau_i \in D_i$. 
