--- a/doc/cons.tex
+++ b/doc/cons.tex
@@ -4,18 +4,17 @@ The values of variables will be restricted by a set of $m$ constraints $C= \{ c_
 \{1,2,\dots,j,\dots , m\}$. The set of 
 variables to which the constraint $c_j$ applies is called its \emph{scope} and is denoted 
 %$X(c_j) = \{x_{j,{i_1}}, x_{j,i_2} , \dots , x_{j,\alpha_j}\}$. 
-$X(c_j) = \{x_{1j}, x_{2j} , \dots , x_{\alpha_jj}\}$. The variable $x_ij$ is the i'th variable in constriant $c_j$ 
+$X(c_j) = \{x_{1j}, x_{2j} , \dots , x_{\alpha_jj}\}$. The variable $x_ {ij}$ is the i'th variable in constriant $c_j$ 
 and corresponds to a variable $x_k\in X$.  
-The size of a scope $|X(c_j)|$ is called the \emph{arity} $\alpha_j$. The constraint $c_j$ can be expressed as a 
-subset of the Cartesian product of the domains of the variables in the scope $X(c_j)$, i.e, $c_j \subseteq 
-D(x_{j,i_1}) \times D(x_{j,i_2}) \times \dots \times D(x_{j,i_{\alpha_j}})$. \\ 
-If all variables of a constraint $c_j$ has a finite domain then the constraint can be written in extensional form. The 
-\emph{extensional form} of $c_j$ is a subset of $\mathbb{Z}^{|X(c_j)|}$ of all combinations of tuples that satisfies 
-$c_j$. \boste{Same som cartesian product?} \\ 
+The size of a scope $|X(c_j)|$ is called the \emph{arity} $\alpha_j$. If all variables of a constraint $c_j$ has a 
+finite domain then the constraint can be written in extensional form. \emph{Extensional form} is a 
+subset of the Cartesian product of the domains of the variables in its scope $X(c_j)$, i.e, $c_j \subseteq 
+D(x_{i_1,j}) \times D(x_{i_2,j}) \times \dots \times D(x_{i_{\alpha_j},j}), \; x_{ij} \in X(c_j)$, that is the set 
+of tuples that satisfy the constraint $c_j$. \\
 We call a constraint $c_j$ a \emph{functional constraint} if given an assignment of values to all variables except 
 $x_i$ in $c_j$, then at most one value of $x_i$ satisfy $c_j$ for all $x_i \in X(c_j)$. In other words the value of a 
 variable in a functional constraint can be determined from the values of the other variables in the functional 
-constraint. \boste{Equational constraint?}
+constraint.
 
 \iffalse
 \subsubsection{Considered Constriants \boste{Not sure about the title and not finished yet. Maybe move to ``Structure 
