--- a/doc/generalsolver.tex
+++ b/doc/generalsolver.tex
@@ -1,6 +1,33 @@
-\begin{figure}[!b]
+The \gensol class contains the most high level methods and most of them are used directly by the user. An overview of 
+the most important methods is shown in figure \ref{fig_general}. \\ \noindent
+\begin{figure}[!b] 
 \begin{center}
- \includegraphics[width=\linewidth/2]{general.pdf} \caption{Important methods in General Solver 
-class}\label{fig_general}
+\includegraphics[width=0.8\linewidth]{general2.pdf} \caption{Important methods in General Solver class} 
+\label{fig_general}
 \end{center} 
-\end{figure}
+\end{figure} 
+The method \method{createVariables} takes three arguments to create a number of variables. The first argument 
+is the number of variables to create with the given lower and upper bound, the second and third argument respectively. 
+The method creates both the gecode variables used in the \class{Gecode Engine} and variables used in the \class{Local 
+Search Engine} class. The variables used in the \class{Local Search Engine} class (LS variables) are of the class 
+\class{Variable} and each has a pointer to the associated Gecode variable. The method returns pointers to the LS 
+variables. \\ 
+The method \method{relax} is only used if an initial solution could not be found within the limits given. It controls 
+how the instance should be relaxed to find an initial solution. There is currently only one method implemented that 
+relaxes the an instance that is described in subsection \ref{sub_inisol}. \\
+All constraint available are created by calling the associated method in \gensol, that calls the constructor 
+of the constraint and the method in \class{Gecode Engine} for posting the constraint in a Gecode space. The constraint 
+objects should not be created directly by the user since these do not post the related constraint in the Gecode space. 
+\\ 
+To implements a new constraint object it must inheriting from the \class{Constraint} class 
+and two methods, one in \class{General Solver} and one in \class{Gecode Engine}, must be implemented. The method in 
+\class{Gecode Engine} must post the constraint in the \class{Gecode Engine} space. The method in \class{General Solver} 
+should call the constructor of the constraint implemented and call the method in \class{Gecode Engine}. The solver must 
+be able to reproduce the call to \class{Gecode Engine} in case it an initial solution is not found within the limits 
+given. The relaxation method must be updated to handle the new constraint implemented as well. \boste{Could avoid 
+inserting code in methods if constraints have pointers to the Gecode space but conceptually it does not make sense.} \\
+To find an initial solution the method \method{initialSolution} must be called and it takes an integer argument. The 
+argument indicates the time Gecode is allowed to search for an initial solution before \method{relax} is called. Once 
+\method{relax} is called the same time limit is given again. \\
+To find a better solution than the initial solution the method \method{optimizeSolution} can be called with a time 
+limit as argument. That method starts the local search that is described in section \ref{sec_local}. 
