--- a/doc/solutions.tex
+++ b/doc/solutions.tex
@@ -3,6 +3,6 @@ solution $\mathbf{\tau}\in sol(\mathbb{P})$ or if there exists a feasible soluti
 The CSP $\mathbb{P}$ can be expanded to a \emph{Constraint Optimization Problem} (COP) $\mathbb{P'}$ 
 with an evaluation function $f(\mathbf{\tau}) \rightarrow \mathbb{R}$ that evaluates the quality of the solution 
 $\mathbf{\tau}$, $\mathbb{P'} = \langle X,D,C,f) \rangle$.  In the COP the task is then to find a feasible solution 
-$\hat{\mathbf{\tau}}$ in $S$ that gives minimum or maximum value of $f(\hat{\mathbf{\tau}})$ depending on the 
-requirements of the problem. \\ 
+$\hat{\mathbf{\tau}}$ in $S$ such that $f(\hat{\mathbf{\tau}}) \leq f(\mathbf{\tau})$ for all feasible solutions $\tau$ 
+of $\mathbb{P}$ if it is a minimization problem. \\ 
   
