--- a/doc/Thesis.tex
+++ b/doc/Thesis.tex
@@ -72,7 +72,7 @@
      \subsubsection{Basic Aspects of Local Search}
     \input{lsneig}
     \subsubsection{Local Search Algorithms}
-    \input{lsalg}
+    \input{lsalg} \label{sub_lsalg}
     \subsubsection{Construction Heuristics}
     \input{construcHeur}
     \subsubsection{Metaheuristics}
@@ -142,7 +142,9 @@
 \newpage  
 \section{From Modeling to Local Search}
 \input{modelsol}
+\newpage
 \section{Local Search Engine} \label{sec_local}
+  \input{lse}
   \subsection{Neighborhoods}
     \subsubsection{Neighborhood Operations}
 \section{Metaheuristics}
